# JJURSever

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Scripts/: JJURServer.conf  URServer.desktop  postinst
doc/: cp2sirius.sh
jjur_server/: CMakeLists.txt  CommandStruct.cpp  CommandStruct.h  ConnectionObserver.cpp  ConnectionObserver.h  PID.h  UR3DMouse.cpp  UR3DMouse.h  URBasicMotion.cpp  URBasicMotion.h  URForceMode.cpp  URForceMode.h  URServer.cpp  URServer.h  URSetPayload.cpp  URSetPayload.h  URStatus.cpp  URStatus.h  URStruct.h  URTcp.cpp  URTcp.h  URToolSetting.cpp  URToolSetting.h  git-info.cmake  version.h.in
jjur_server/lib/: libspnav.so.0.1
jjur_server/third/: WinToLinux.h
jjur_server_test/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
